--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             margin: 2px;
         }
 
+        #output {
+            background: #f7f7f7;
+        }
+
         #change-width-by {
             width: 50px;
         }
