--- a/index.html
+++ b/index.html
@@ -5,85 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
     <title>MONOSPACER</title>
 
     <style>
-        * {
-            box-sizing: border-box;
-            margin: auto;
-            text-align: center;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        .holder {
-            width: 80%;
-            margin: auto;
-        }
-
-        section{
-            margin: 20px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 30vh; 
-            text-align: left;
-        }
-
-        button {
-            margin: 2px;
-            background-color: dodgerblue;
-            color: white;
-            border: 1px solid black;
-        }
-
-        span {
-            margin: 1px;
-        }
-
-        #output {
-            background: #f7f7f7;
-        }
-
-        #change-width-by {
-            width: 50px;
-        }
-
-        .flex {
-            display: flex;
-        }
-
-        .flex-row {
-            flex-direction: row;
-        }
-
-        .flex-column {
-            flex-direction: column;
-        }
-
-        .flex-justify-between {
-            justify-content: space-between;
-        }
-
-        .flex-justify-end {
-            justify-content: flex-end
-        }
-
-        .flex-align-end {
-            align-items: flex-end;
-        }
-
-        .flex-align-center {
-            align-items: center;
-        }
-
-        .color-lime {
-            color: rgb(6, 175, 6);
-        }
-
-        .display-none {
-           display: none;
-        }
+        
     </style>
 </head>
 <body>
