--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>MONOSPACER</title>
-
-    <style>
-        
-    </style>
 </head>
 <body>
     <div class="holder">
 
-        <section>
-            <div><h1>XML FONT MONOSPACER</h1></div>
+        <section class="header">
+            <div><h1>BITMAP XML FONT MONOSPACER</h1></div>
             <div><h4>Makes font characters monospaced.</h4></div>
         </section>
 
-        <section>
+        <section class="wrapper">
             <div><h2>INPUT</h2></div>
             <div>
-                <div class="flex flex-row flex-justify-between flex-align-center">
+                <div class="text-area-tools flex flex-row flex-justify-between flex-align-center">
                     <span class="flex flex-column">
                         <h4>CHANGE WIDTH</h4>
                         <div>
@@ -43,10 +39,10 @@
             </div>
         </section>
 
-        <section>
+        <section class="wrapper">
             <div><h2>RESULT</h2></div>
             <div>
-                <div class="flex flex-justify-end">
+                <div class="text-area-tools flex flex-justify-end flex-align-center">
                     <span id="text-copied" class="color-lime display-none">Copied!</span>
                     <button id="copy-clipboard">Copy to clipboard</button>
                 </div>
