hide width changer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div><h2>INPUT</h2></div>
             <div>
                 <div class="text-area-tools flex flex-row flex-justify-between flex-align-center">
-                    <span class="flex flex-column">
+                    <span style="display: none;" class="flex flex-column">
                         <h4>CHANGE WIDTH</h4>
                         <div>
                             <button id="decrease-width" title="Decrease width">&#60;</button>
