--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    <title>MONOSPACER</title>
+    <title>BITMAP FONT MONOSPACER</title>
 </head>
 <body>
     <div class="holder">
 
         <section class="header">
-            <div><h1>BITMAP XML FONT MONOSPACER</h1></div>
-            <div><h4>Makes font characters monospaced.</h4></div>
+            <div><h1>BITMAP FONT MONOSPACER</h1></div>
+            <div><h4>The tool automatically sets the highest xadvance property and recalculates xoffset by that value.</h4></div>
         </section>
 
         <section class="wrapper">
@@ -29,7 +29,7 @@
                             <button id="increase-width" title="Increase width">&#62;</button>
                         </div>
                     </span>
-                    <span>Paste the characters which require monospacing.</span>
+                    <span>Paste only the characters which require monospacing.</span>
                     <span>
                         <button id="example-btn">Place Example XML</button>
                     </span>
