Added change xadvance functionality

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <div><h2>INPUT</h2></div>
             <div>
                 <div class="text-area-tools flex flex-row flex-justify-between flex-align-center">
+                    <span>
+                        <div>Change xadvance</div>
+                        <div>
+                            <button id="decrease-x-advance">↓</button>
+                            <button id="increase-x-advance">↑</button>
+                        </div>
+                        
+                    </span>
                     <span>Paste only the characters which require monospacing.</span>
                     <span>
                         <button id="example-btn">Place Example XML</button>
