Changed example button text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </span>
                     <span>Paste only the characters which require monospacing.</span>
                     <span>
-                        <button id="example-btn">Place Example XML</button>
+                        <button id="example-btn">Test with example XML</button>
                     </span>
                 </div>
                 
