--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         
                     </span>
                     <span>Paste only the characters which require monospacing.</span>
+                    <span class="flex flex-direction-column"> 
+                        <input type="checkbox" id="monospacer-toggle" name="monospacer-toggle" checked>
+                        <label for="monospacer-toggle">Monospacing</label></span>
                     <span>
                         <button id="example-btn">Test with example XML</button>
                     </span>
